# Tester

./: (test file).md  README.md  запускатор.bat
bot/: README.md  config.yaml  go.mod  go.sum  main.go
module authorization/: KladHelper.luac  auth.js  main.js  package.json  posttest.js  redis.js  sanie.js  server.js  servertest.js
module main/: .gitignore  CMakeLists.txt  README.md  handleClient.cpp  main.cpp
module main/src/: PostgreSQL.h  checkToken.cpp  checkToken.h  findToken.h  getAddress.cpp  getAddress.h  handleClient.cpp  handleClient.h  handlerRequest.cpp  handlerRequest.h  main.cpp  postgres.cpp  postgres.h  simpleFunctions.h
module main/src/lib/lib/: libpq.lib  pqxx.lib
module telegram/: README.md
module web/: Dockerfile  README.md  authService.js  constants.js  docker-compose.yml  index.html  redisClient.js  script.js  server.js  style.css  tokenUtils.js
module web/dashboard/: dashboard.html
module web/login/: login.html  style.css
module_authorization/: README.md  package-lock.json  servertest.js
module_main/: .gitignore
module_main/src/: handlerRequest.h
module_telegram/: config.yaml  dump.rdb  package-lock.json  package.json
module_telegram/front/: front.go
module_web/: README.md  package-lock.json  package.json  server.js
module_web/Redis-7.4.2-Windows-x64-cygwin-with-Service/: dump.rdb
module_web/config/: permissions.js
module_web/middleware/: checkPermissions.js
module_web/public/: index.html
module_web/src/: App.css  App.js  index.js
module_web/src/components/: Dashboard.js  ErrorPage.js  Forbidden.js  Home.css  Home.js  Login.css  Login.js  Logout.js  SomeComponent.js  YandexAuth.js  style.css
module_web/src/components/auth/: AuthCallback.js  CodeAuth.js  EnterCode.js  GitHubAuth.js  YandexAuth.js
module_web/src/components/errors/: AuthErrorPage.js  ErrorPage.js  Forbidden.js  Unauthorized.js
(+46 files in other folders)
